fix: light mode color tweak.

--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@ function changeFavicon(hours, minutes) {
       bgColor = "#a99";
       fgColor = "#000";
     } else {
-      bgColor = "#dcc";
-      fgColor = "#888";
+      bgColor = "#f0e5e5";
+      fgColor = "#bba5a5";
     }
   }
 
